🔧 config(setup): update dev environment and tool configurations >>> ⏰ 6m
exclude notebooks from ruff and fix dev dependencies

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,8 +5,12 @@
 pytest
 pre-commit
 ruff
-commitizen
-commitizen-gitmoji
+commitizen==2.42.1
+commitizen-gitmoji==0.1.1
 questionary==1.10.0
 prompt-toolkit==3.0.36
-detect-secrets
+detect-secrets==1.5.0
+ipykernel
+pandas
+matplotlib
+emoji
