🧐 exploration(benchmarking): setup quality tools and performance benchmarking infrastructure >>> ⏰ 3h
- Updated project exclusions in .gitignore.
- Stabilized development environment dependencies.
- Implemented modular benchmarking suite in src/benchmark.py.
- Integrated performance analysis report into SOLUTION.md.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
 .venv*
 *farmers-protest-tweets-2021-2-4.json
 .kiro*
+.ruff*
+.pytest
+cache*
+__pycache__
+.mypy_cache*
+.cargo*
+.target*
+.idea/
+.vscode/
+.DS_Store
+.Python
+.pytest_cache/
+.coverage
+.eggs/
+*.egg-info/
+dist/
+build/
+*.so
+.Python
+.coverage
+.coverage.*
+.cache
