✨ feat(unit-test): implement unit tests for Q1, Q2, Q3 and common utils >>> ⏰ 1h
Add comprehensive data-driven unit test suite (102 tests) using Kiro Engine Pattern. Includes validation for modular components and integration flows. Fixed null handling in Q3 memory and updated Ruff configuration to support lambda assignment.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,6 @@ update_changelog_on_bump = true
 line-length = 88
 target-version = "py312"
 exclude = ["*.ipynb"]
+
+[tool.ruff.lint]
+ignore = ["E731"]
