✨ feat(automation): integrate unit tests into pre-commit and makefile >>> ⏰ 3m
Add unit-tests pre-commit hook, configure pytest.ini for module discovery, and update Makefile test target. Ensures all 102 tests pass before committing.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,3 +54,13 @@ repos:
         stages:
           - post-commit
           - pre-push
+
+  - repo: local
+    hooks:
+      - id: unit-tests
+        name: run unit tests
+        entry: uv run pytest
+        language: system
+        types: [python]
+        pass_filenames: false
+        always_run: true
