--- a/pytest.ini
+++ b/pytest.ini
@@ -1,72 +1,4 @@
-[tool:pytest]
-# Pytest configuration for Twitter data analysis project
-
-# Test discovery
+[pytest]
+pythonpath = .
 testpaths = test
 python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
-
-# Output and reporting
-addopts =
-    --strict-markers
-    --strict-config
-    --verbose
-    --tb=short
-    --showlocals
-    --durations=10
-    --color=yes
-
-# Markers for test categorization
-markers =
-    slow: marks tests as slow (deselect with '-m "not slow"')
-    integration: marks tests as integration tests
-    unicode: marks tests that focus on Unicode handling
-    error_handling: marks tests that focus on error handling
-    performance: marks tests that check performance characteristics
-    functional_parity: marks tests that verify time/memory version parity
-    real_data: marks tests using real data patterns
-    edge_case: marks tests for edge cases and boundary conditions
-
-# Minimum version requirements
-minversion = 7.0
-
-# Test timeout (in seconds)
-timeout = 300
-
-# Warnings configuration
-filterwarnings =
-    ignore::DeprecationWarning
-    ignore::PendingDeprecationWarning
-    ignore::UserWarning:polars.*
-    ignore::UserWarning:orjson.*
-
-# Coverage configuration
-[coverage:run]
-source = src
-omit =
-    */tests/*
-    */test_*
-    */__pycache__/*
-    */venv/*
-    */.venv/*
-
-[coverage:report]
-exclude_lines =
-    pragma: no cover
-    def __repr__
-    if self.debug:
-    if settings.DEBUG
-    raise AssertionError
-    raise NotImplementedError
-    if 0:
-    if __name__ == .__main__.:
-    class .*\bProtocol\):
-    @(abc\.)?abstractmethod
-
-show_missing = True
-precision = 2
-skip_covered = False
-
-[coverage:html]
-directory = test_coverage_html
