🐛 fix(cloud): fix deploymen pipeline >>> ⏰ 1h
create the bucket using github piplene before execute terrform

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,10 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
 
+      - name: Bootstrap Backend Bucket
+        run: |
+          gsutil mb -l ${{ vars.GCP_REGION }} gs://${{ vars.GCP_PROJECT_ID }}-lake || echo "Bucket already exists"
+
       - name: Package Function Code
         run: |
           zip -r source.zip main.py src/ requirements.txt
