🐛 fix(cloud): fix deploymen pipeline >>> ⏰ 5m
add time sleep to the bucket creation be efective

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Bootstrap Backend Bucket
         run: |
           gsutil mb -l ${{ vars.GCP_REGION }} gs://${{ vars.GCP_PROJECT_ID }}-lake || echo "Bucket already exists"
+          sleep 10
+          gsutil ls gs://${{ vars.GCP_PROJECT_ID }}-lake
 
       - name: Package Function Code
         run: |
