--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,8 @@
 memory-profiler==0.61.0
-orjson
-polars
-structlog
-typing
-datetime
-collections
-re
-functools
-google-cloud-storage
-functions-framework
-gcsfs
-fsspec
+orjson==3.11.5
+polars==1.37.1
+structlog==25.5.0
+google-cloud-storage==3.8.0
+functions-framework==3.10.0
+gcsfs==2026.1.0
+fsspec==2026.1.0
